# websiteprotfolio

portfolio/: .dockerignore  .env  .env.production  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
portfolio/nginx/: nginx.conf
portfolio/src/: admin.rs  auth.rs  db.rs  email.rs  main.rs  models.rs  routes.rs
portfolio/static/css/: style.css
portfolio/static/images/: README.md
portfolio/static/js/: main.js
portfolio/templates/: about.html  base.html  blog_detail.html  blogs.html  contact.html  index.html  index_old.html  project_detail.html  projects.html
portfolio/templates/admin/: base.html  blog_form.html  blogs.html  dashboard.html  education.html  education_form.html  email_settings.html  experience.html  experience_form.html  login.html  messages.html  profile.html  project_form.html  projects.html  service_form.html  services.html  site_content.html  skills.html
