[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
authors = ["Md Jobayer Arafat"]
description = "Modern Portfolio Website"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tera = "1"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
slug = "0.1"
pulldown-cmark = "0.10"
actix-multipart = "0.7"
futures-util = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

[profile.release]
opt-level = 3
lto = true
